Update testimonial page style and fix overflow issue in overview and storm page

--- a/components/pages/slides/styles.module.scss
+++ b/components/pages/slides/styles.module.scss
@@ -102,7 +102,7 @@
 
 .content {
   margin: 150px 90px 0;
-  height: calc(100% - 100px);
+  height: calc(100% - 150px);
 }
 
 .home {
@@ -303,7 +303,7 @@
 
 .overview {
   color: #fff;
-  z-index: 1;
+  overflow-y: hidden;
 
   &__logo {
     position: absolute;
@@ -339,7 +339,7 @@
 
   &__image {
     position: absolute;
-    top: 250px;
+    top: 150px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -396,9 +396,7 @@
 
   &__map-area {
     position: relative;
-    padding: 20px 10px;
     animation-delay: 0.9s;
-    height: 550px;
   }
 }
 
@@ -708,20 +706,23 @@
 
 .experience {
   &__item-container {
-    margin-top: 3%;
+    margin-top: 80px;
     width: 70%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    // grid-template-columns: 1fr 1fr;
+    grid-gap: 20%;
   }
 
   &__item {
+    flex: 0 0 40%;
     background: #f3f3f3;
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
+    margin-bottom: 50px;
     border-radius: 20px;
 
     &-icon {
